--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "x12311231-laravel-socialite/huawei": "dev-master"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
@@ -61,5 +62,11 @@
         }
     },
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "repositories": {
+        "github": {
+            "type": "vcs",
+            "url": "https://github.com/x12311231/x12311231-laravel-socialite-huawei.git"
+        }
+    }
 }
