--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
             LARAVEL_SAIL: 1
             XDEBUG_MODE: '${SAIL_XDEBUG_MODE:-off}'
             XDEBUG_CONFIG: '${SAIL_XDEBUG_CONFIG:-client_host=host.docker.internal}'
+            PATH: '/var/www/html/vendor/laravel/sail/node-v16.18.0-linux-x64/bin:$PATH'
         volumes:
             - '.:/var/www/html'
         networks:
